# zspy-cli

./: .gitignore  .gitmodules  CMakeLists.txt  FakeZSpy.cs  Program.cs  ReadMe.md  zspy-cli.csproj  zspy-cli.sln
Properties/: AssemblyInfo.cs
include/: ILogger.h  Logger.h  LoggerWithFiltering.h  LoggerWithHighlighting.h
src/: FakeZSpy.cs  ILogger.cpp  ILogger.cs  Logger.cpp  Logger.cs  LoggerWithFiltering.cpp  LoggerWithFiltering.cs  LoggerWithHighlighting.cpp  LoggerWithHighlighting.cs  Options.cs  Program.cs  main.cpp
